kong-example/gateway-01-namespace/httproute-application-1.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: test-app-1-httproute
  namespace: kong-common-gateway
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test-app-1
      backendRefs:
        - name: nginx
          port: 80
          namespace: kong-test-app-1
